租車地點驗證修正

--- a/src/main/resources/templates/frontend/car/vendor-loc-form.html
+++ b/src/main/resources/templates/frontend/car/vendor-loc-form.html
@@ -54,9 +54,9 @@
 								  class="form-horizontal needs-validation" enctype="multipart/form-data">
 								  
 								<p class="card-description mt-4">據點資料</p>
-								<input th:field="*{id}" id="number" name="locationId" type="hidden"/>
-								<input th:field="*{companyId}" id="number" type="hidden"/>
-								<input th:field="*{companyName}" id="text" type="hidden"/>
+								<input th:field="*{id}" id="id" name="locationId" type="hidden"/>
+								<input th:field="*{companyId}" id="companyId" type="hidden"/>
+								<input th:field="*{companyName}" id="companyName" type="hidden"/>
 								<div class="row form-group my-4">
 									<div class="col-lg-1"></div>
 									<input th:field="*{id}" id="id" type="hidden" class="form-control" placeholder="" />
