租車商家list優化

--- a/src/main/resources/templates/frontend/car/vendor-loc-form.html
+++ b/src/main/resources/templates/frontend/car/vendor-loc-form.html
@@ -210,7 +210,7 @@
 		})
 		
 		
-		$('#address').on('change', function () {
+		$('#address').on('blur', function () {
 			let address = $('.county').val()+"+"+$('.district').val()+"+"+$('#address').val()
 			console.log(address);
 			$.ajax({
