--- a/src/main/resources/templates/frontend/car/car-model.html
+++ b/src/main/resources/templates/frontend/car/car-model.html
@@ -45,7 +45,7 @@
 			<div class="row">
 				<div class="col-sm-3">
 					<div class="card">
-						<div id="select-county" class="card-body"></div>
+						<div class="card-body select-county"></div>
 					</div>
 				</div>
 				<!-- Block2 -->
@@ -77,10 +77,15 @@
 									</div>
 								</div>
 							</div>
-							<div class="collapse p-lr-20" th:id="'collapseExample'+${car.id}">
+							<div class="collapse" th:id="'collapseExample'+${car.id}">
 								<div th:each="option:${car.carOptions}" >
-									<div class="bor18 ">
+									<div class="bor18 bg8">
 										<div class="row">
+											<div class="col-sm-4">
+												<div class="pos-relative hov-img0 card-img-left" style="height: 180px">
+													<img th:src="@{${option.carLocation.image}}" class="mt-4 pt-3" alt="IMG-CAR">
+												</div>
+											</div>
 											<div class="col-sm-8 card-body block2-txt flex-w flex-t p-t-14 ">
 												<div class="block2-txt-child1 mb-1">
 													<div>
