--- a/src/main/resources/templates/backend/user-insert.html
+++ b/src/main/resources/templates/backend/user-insert.html
@@ -69,7 +69,7 @@
                         <div class="form-group row">
                           <label class="col-sm-3 col-form-label" for="email">Email</label>
                           <div class="col-sm-9">
-                            <input id="email" type="email" class="form-control" placeholder="請輸入正確的Email收確認信使用" name="email" required="required" onchange="CheckEmail()"/>
+                            <input id="email" type="email" class="form-control" placeholder="請輸入正確的Email收確認信使用" name="username" required="required" onchange="CheckEmail()"/>
                             <span id="message" style="position:absolute ; right:17px;"></span>
                             <span id="s_email" style="position:absolute ; right:17px;"></span>
                           </div>
