--- a/src/main/resources/templates/backend/user-edit.html
+++ b/src/main/resources/templates/backend/user-edit.html
@@ -63,7 +63,7 @@
                         <div class="form-group row">
                           <label class="col-sm-3 col-form-label" for="email">Email</label>
                           <div class="col-sm-9">
-                            <input id="email" type="email" class="form-control" placeholder="請輸入正確的Email收確認信使用" name="email" required="required" th:value="${User.email}" readonly/>
+                            <input id="email" type="email" class="form-control" placeholder="請輸入正確的Email收確認信使用" name="username" required="required" th:value="${User.username}" readonly/>
                           </div>
                         </div>
                       </div>
