--- a/src/main/resources/templates/frontend/hotel/hotel-newRoom.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-newRoom.html
@@ -84,6 +84,98 @@
                                     <input type="text" th:field="*{roomprice}" id="peopleCount"
                                            class="form-control" onkeypress="return my_key(event)"/>
                                 </fieldset>
+                                <fieldset class="form-group">
+                                    <label>衛浴數量</label>
+                                    <input type="text" th:field="*{bathCount}" id="peopleCount"
+                                           class="form-control" onkeypress="return my_key(event)"/>
+                                </fieldset>
+                                <fieldset class="form-group">
+                                    <label>房間數量</label>
+                                    <input type="text" th:field="*{bedroomCount}" id="peopleCount"
+                                           class="form-control" onkeypress="return my_key(event)"/>
+                                </fieldset>
+                                <fieldset class="form-group">
+                                    <label>每房間床的數量</label>
+                                    <input type="text" th:field="*{bedCount}" id="peopleCount"
+                                           class="form-control" onkeypress="return my_key(event)"/>
+                                </fieldset>
+                                <fieldset class="form-group">
+                                    <label>房間總坪數</label>
+                                    <input type="text" th:field="*{hotelArea}" id="peopleCount"
+                                           class="form-control" onkeypress="return my_key(event)"/>
+                                </fieldset>
+                                <fieldset class="form-group">
+                                    <label>建議住的人數</label>
+                                    <input type="text" th:field="*{peopleCount}" id="peopleCount"
+                                           class="form-control" onkeypress="return my_key(event)"/>
+                                </fieldset>
+
+                                <fieldset class="form-group">
+                                    <label>房間使用規則</label>
+                                    <textarea th:field="*{roomRule}" id="Howgoto"
+                                              class="form-control"> </textarea>
+                                </fieldset>
+                                <fieldset class="form-group">
+                                    <label>介紹一下你的房間</label>
+                                    <textarea th:field="*{roomIntroduce}" id="Howgoto"
+                                              class="form-control"> </textarea>
+                                </fieldset>
+                                <fieldset class="form-group">
+                                    <label>介紹你房間的特色1</label>
+                                    <input type="text" th:field="*{feature1}" id="peopleCount"
+                                           class="form-control" onkeypress="return my_key(event)"/>
+                                </fieldset>
+                                <fieldset class="form-group">
+                                    <label>介紹你房間的特色2</label>
+                                    <input type="text" th:field="*{feature2}" id="peopleCount"
+                                           class="form-control" onkeypress="return my_key(event)"/>
+                                </fieldset>
+                                <fieldset class="form-group">
+                                    <label>介紹你房間的特色3</label>
+                                    <input type="text" th:field="*{feature3}" id="peopleCount"
+                                           class="form-control" onkeypress="return my_key(event)"/>
+                                </fieldset>
+
+                                <td>此房的房型</td>
+                                <fieldset class="form-group">
+                                    <select th:field="*{roomtype}" class="form-select"
+                                            aria-label="Default select example">
+                                        <option value="單人房">單人房</option>
+                                        <option value="雙人房">雙人房</option>
+                                        <option value="四人房">四人房</option>
+                                    </select>
+                                </fieldset>
+
+
+                                <fieldset class="form-group">
+                                    <label>你提供什麼設施呢?</label><br>
+                                    <input type="checkbox" th:field="*{provide}" id="provide"
+                                           value="浴巾"/>浴巾
+                                    <input type="checkbox" th:field="*{provide}" id="provide"
+                                           value="空調"/>空調
+                                    <input type="checkbox" th:field="*{provide}" id="provide"
+                                           value="陽台或露台"/>陽台或露台
+                                    <input type="checkbox" th:field="*{provide}" id="provide"
+                                           value="書桌"/>書桌
+                                    <input type="checkbox" th:field="*{provide}" id="provide"
+                                           value="免鑰匙進出"/>免鑰匙進出
+                                    <input type="checkbox" th:field="*{provide}" id="provide"
+                                           value="濱海"/>濱海
+                                    <input type="checkbox" th:field="*{provide}" id="provide"
+                                           value="免費停車"/>免費停車
+                                    <input type="checkbox" th:field="*{provide}" id="provide"
+                                           value="免費wifi"/>免費wifi
+                                    <input type="checkbox" th:field="*{provide}" id="provide"
+                                           value="暖風"/>暖風
+                                    <input type="checkbox" th:field="*{provide}" id="provide"
+                                           value="廚房用具(廚具`油`調味料)"/>廚房用具(廚具`油`調味料)
+                                    <input type="checkbox" th:field="*{provide}" id="provide"
+                                           value="專用入口"/>專用入口
+                                    <input type="checkbox" th:field="*{provide}" id="provide"
+                                           value="電視"/>電視
+
+                                </fieldset>
+
 
                                 <button type="submit" class="btn btn-success">Save</button>
                             </form>
