--- a/src/main/resources/templates/frontend/car/vendor-location.html
+++ b/src/main/resources/templates/frontend/car/vendor-location.html
@@ -120,7 +120,76 @@
 			                <div class="col-md-4 col-lg-5 p-b-30 px-5">
 			                    <img class="img-responsive my-4" alt="image" width="100%" height="auto" id="locationImage" src="/"/>
 			                </div>
-			
+
+
+				<div class="col-md-4 m-t-45 p-b-30">
+					<div class="p-t-5">
+						<p th:text="${option.carLocation.companyName}" class="stext-110 cl4"></p>
+						<h4 th:text="${option.carModel.makeCh + ' ' + option.carModel.makeEn + ' ' + option.carModel.model}" class="ltext-102 font-weight-bold cl2 js-name-detail p-b-14"></h4>
+						<div class="p-b-10">
+							<div class="rating-count" th:id="${option.id}" value="carRental">
+								尚無評論
+							</div>
+							<div class="p-t-20">
+								<i class="fa fa-map-marker" aria-hidden="true"></i>
+								<span th:text="${option.carLocation.county + ', ' + option.carLocation.district}"></span>
+							</div>
+							<p th:text="${option.carLocation.county + option.carLocation.district + option.carLocation.address}"></p>
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-md-4 p-b-30">
+					<div class="card">
+						<div class="card-body">
+							<del><span class="cl3" th:text="'TWD $' + ${option.price}"></span></del>
+							<span class="clblack mtext-109" th:text="'TWD $' + ${option.priceSale}"></span>
+						</div>
+						<div class="card-body p-t-33">
+							<div class="row m-b-10">
+								<div class="col-3">
+									<p class="d-flex justify-content-center p-t-8">
+										日期
+									</p>
+								</div>
+
+								<div class="col-9 respon6-next">
+									<div class="rs1-select2 bor8 bg0">
+										<input type="date" name="date" class="form-control">
+										<div class="dropDownSelect2"></div>
+									</div>
+								</div>
+							</div>
+
+							<div class="row p-b-10">
+								<div class="col-3">
+									<p class="dis-inline-block align-middle p-t-20 d-flex justify-content-center">
+										數量
+									</p>
+								</div>
+								<div class="col-9 ">
+									<div class="wrap-num-product flex-w m-r-20 m-tb-10">
+										<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
+											<i class="fs-16 zmdi zmdi-minus"></i>
+										</div>
+										<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product" value="1">
+										<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
+											<i class="fs-16 zmdi zmdi-plus"></i>
+										</div>
+									</div>
+
+								</div>
+							</div>
+							<button	class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail">
+								加入購物車
+							</button>
+						</div>
+					</div>
+				</div>
+
+
+
+
 			                <div class="col-md-8 col-lg-7 p-b-30">
 			                    <div class="p-r-50 p-t-5 p-lr-0-lg">
 			                        <h4 id="locationName" class="mtext-105 cl2 js-name-detail p-b-14 font-weight-bold"></h4>
@@ -134,68 +203,6 @@
 			                            ornare feugiat.
 			                        </p>
 			
-			                        <!--  -->
-			                        <div class="p-t-33">
-			                            <div class="flex-w flex-r-m p-b-10">
-			                                <div class="size-203 flex-c-m respon6">
-			                                    Size
-			                                </div>
-			
-			                                <div class="size-204 respon6-next">
-			                                    <div class="rs1-select2 bor8 bg0">
-			                                        <select class="js-select2" name="time">
-			                                            <option>Choose an option</option>
-			                                            <option>Size S</option>
-			                                            <option>Size M</option>
-			                                            <option>Size L</option>
-			                                            <option>Size XL</option>
-			                                        </select>
-			                                        <div class="dropDownSelect2"></div>
-			                                    </div>
-			                                </div>
-			                            </div>
-			
-			                            <div class="flex-w flex-r-m p-b-10">
-			                                <div class="size-203 flex-c-m respon6">
-			                                    Color
-			                                </div>
-			
-			                                <div class="size-204 respon6-next">
-			                                    <div class="rs1-select2 bor8 bg0">
-			                                        <select class="js-select2" name="time">
-			                                            <option>Choose an option</option>
-			                                            <option>Red</option>
-			                                            <option>Blue</option>
-			                                            <option>White</option>
-			                                            <option>Grey</option>
-			                                        </select>
-			                                        <div class="dropDownSelect2"></div>
-			                                    </div>
-			                                </div>
-			                            </div>
-			
-			                            <div class="flex-w flex-r-m p-b-10">
-			                                <div class="size-204 flex-w flex-m respon6-next">
-			                                    <div class="wrap-num-product flex-w m-r-20 m-tb-10">
-			                                        <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-			                                            <i class="fs-16 zmdi zmdi-minus"></i>
-			                                        </div>
-			
-			                                        <input class="mtext-104 cl3 txt-center num-product" type="number"
-			                                               name="num-product" value="1">
-			
-			                                        <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-			                                            <i class="fs-16 zmdi zmdi-plus"></i>
-			                                        </div>
-			                                    </div>
-			
-			                                    <button
-			                                            class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail">
-			                                        Add to cart
-			                                    </button>
-			                                </div>
-			                            </div>
-			                        </div>
 			
 			                        <!--  -->
 			                        <div class="flex-w flex-m p-l-100 p-t-40 respon7">
