--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -95,7 +95,7 @@
                         <i class="zmdi zmdi-search"></i>
                     </div>
                     <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart"
-                         data-notify="2">
+                         data-notify="2" >
                         <i class="zmdi zmdi-shopping-cart"></i>
                     </div>
 
@@ -105,11 +105,18 @@
                         <i class="zmdi zmdi-favorite-outline"></i>
                     </a>
                     <!-- 						<a th:href="@{/login} @{/backend/index}" -->
-                    
-                    <div class="account p-t-22" >
+                    <div class="account p-t-22">
                         <a th:href="@{/login}"
                            class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
                            data-notify="0" >
+                            <i class="zmdi zmdi-account"></i>
+                        </a>
+                    </div>
+                    
+                    <div class="account p-t-22" sec:authorize="isAuthenticated()">
+                        <a 
+                            class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" 
+                            data-notify="0" > 
                             <i class="zmdi zmdi-account"></i>
                         </a>
 <!--                     </div> -->
@@ -124,15 +131,16 @@
                             <li><a th:href="@{/logout}">登出</a></li>
                         </ul>
                         <ul class="sub-menu" sec:authorize="hasRole('DEALER')">
-                            <li><a th:href="@{/admin}">商家資料管理</a></li>
+                            <li><a th:href="@{/userdetails}">商家資料管理</a></li>
                             <li><a th:href="@{/vendor/tickets}">景點商家管理</a></li>
                             <li><a th:href="@{/vendor/hotels}">飯店商家管理</a></li>
                             <li><a th:href="@{/vendor/cars/locations/1}">租車商家管理</a></li>
                             <li><a th:href="@{/logout}">登出</a></li>
                         </ul>
                         <ul class="sub-menu" sec:authorize="hasRole('USER')">
-                            <li><a th:href="@{/admin}">修改個人資料</a></li>
-                            <li><a th:href="@{/vendor/tickets}">查看訂單</a></li>
+                            <li><a th:href="@{/userdetails}">修改個人資料</a></li>
+                            <li><a th:href="@{/vendor/tickets}">我的訂單</a></li>
+                            <li><a th:href="@{/vendor/tickets}">我的優惠券</a></li>
                             <li><a th:href="@{/logout}">登出</a></li>
                         </ul>
                     </div>
