商品頁面評論區

--- a/src/main/resources/templates/frontend/car/car-location.html
+++ b/src/main/resources/templates/frontend/car/car-location.html
@@ -75,6 +75,7 @@
 <!-- 										<div class="rating-count" th:id="${car.id}" value="carRental"> -->
 <!-- 											尚無評論 -->
 <!-- 										</div> -->
+<!-- ${#aggregates.sum(product.paidService.![price])} -->
 										<div class="flex-r">
 											<button class="btn btn-warning text-right" type="button" data-toggle="collapse" th:data-target="'#collapseExample'+${location.id}" aria-expanded="false" aria-controls="collapseExample">
 												<i class="fa fa-angle-down" aria-hidden="true"></i>
