--- a/src/main/resources/templates/frontend/car/car-detail.html
+++ b/src/main/resources/templates/frontend/car/car-detail.html
@@ -110,29 +110,32 @@
 					<div class="p-b-30 m-lr-15-sm">
 										<!-- Review -->
 						<div class="flex-w flex-t p-b-68">
-							<div class="wrap-pic-s size-109 bor0 of-hidden m-r-18 m-t-6">
-								<img src="images/avatar-01.jpg" alt="AVATAR">
+							<div class="comments-itemId" th:id="${option.id}" value="carRental">
+								尚無評論
 							</div>
+<!-- 							<div class="wrap-pic-s size-109 bor0 of-hidden m-r-18 m-t-6"> -->
+<!-- 								<img src="images/avatar-01.jpg" alt="AVATAR"> -->
+<!-- 							</div> -->
 
-							<div class="size-207">
-								<div class="flex-w flex-sb-m p-b-17">
-									<span class="mtext-107 cl2 p-r-20">
-										Ariana Grande
-									</span>
-									<span class="fs-18 cl11">
-										<i class="zmdi zmdi-star"></i>
-										<i class="zmdi zmdi-star"></i>
-										<i class="zmdi zmdi-star"></i>
-										<i class="zmdi zmdi-star"></i>
-										<i class="zmdi zmdi-star-half"></i>
-									</span>
-								</div>
+<!-- 							<div class="size-207"> -->
+<!-- 								<div class="flex-w flex-sb-m p-b-17"> -->
+<!-- 									<span class="mtext-107 cl2 p-r-20"> -->
+<!-- 										Ariana Grande -->
+<!-- 									</span> -->
+<!-- 									<span class="fs-18 cl11"> -->
+<!-- 										<i class="zmdi zmdi-star"></i> -->
+<!-- 										<i class="zmdi zmdi-star"></i> -->
+<!-- 										<i class="zmdi zmdi-star"></i> -->
+<!-- 										<i class="zmdi zmdi-star"></i> -->
+<!-- 										<i class="zmdi zmdi-star-half"></i> -->
+<!-- 									</span> -->
+<!-- 								</div> -->
 
-								<p class="stext-102 cl6">
-									Quod autem in homine praestantissimum atque optimum est, id
-									deseruit. Apud ceteros autem philosophos
-								</p>
-							</div>
+<!-- 								<p class="stext-102 cl6"> -->
+<!-- 									Quod autem in homine praestantissimum atque optimum est, id -->
+<!-- 									deseruit. Apud ceteros autem philosophos -->
+<!-- 								</p> -->
+<!-- 							</div> -->
 						</div>
 
 						<!-- Add review -->
@@ -143,7 +146,7 @@
 							<p class="stext-102 cl6">
 								Your email address will not be published. Required fields are marked *
 							</p>
-
+							
 							<div class="flex-w flex-m p-t-50 p-b-23">
 								<span class="stext-102 cl3 m-r-16">
 									Your Rating
