--- a/src/main/resources/templates/frontend/car/vendor-location.html
+++ b/src/main/resources/templates/frontend/car/vendor-location.html
@@ -122,70 +122,54 @@
 			                </div>
 
 
-				<div class="col-md-4 m-t-45 p-b-30">
-					<div class="p-t-5">
-						<p th:text="${option.carLocation.companyName}" class="stext-110 cl4"></p>
-						<h4 th:text="${option.carModel.makeCh + ' ' + option.carModel.makeEn + ' ' + option.carModel.model}" class="ltext-102 font-weight-bold cl2 js-name-detail p-b-14"></h4>
-						<div class="p-b-10">
-							<div class="rating-count" th:id="${option.id}" value="carRental">
-								尚無評論
-							</div>
-							<div class="p-t-20">
-								<i class="fa fa-map-marker" aria-hidden="true"></i>
-								<span th:text="${option.carLocation.county + ', ' + option.carLocation.district}"></span>
-							</div>
-							<p th:text="${option.carLocation.county + option.carLocation.district + option.carLocation.address}"></p>
-						</div>
-					</div>
-				</div>
 				
-				<div class="col-md-4 p-b-30">
-					<div class="card">
-						<div class="card-body">
-							<del><span class="cl3" th:text="'TWD $' + ${option.price}"></span></del>
-							<span class="clblack mtext-109" th:text="'TWD $' + ${option.priceSale}"></span>
-						</div>
-						<div class="card-body p-t-33">
-							<div class="row m-b-10">
-								<div class="col-3">
-									<p class="d-flex justify-content-center p-t-8">
-										日期
-									</p>
-								</div>
+<!-- 				<div class="col-md-4 p-b-30"> -->
+<!-- 					<div class="card"> -->
+<!-- 						<div class="card-body"> -->
+<!-- 							<del><span class="cl3" th:text="'TWD $' + ${option.price}"></span></del> -->
+<!-- 							<span class="clblack mtext-109" th:text="'TWD $' + ${option.priceSale}"></span> -->
+<!-- 						</div> -->
+<!-- 						<div class="card-body p-t-33"> -->
+<!-- 							<div class="row m-b-10"> -->
+<!-- 								<div class="col-3"> -->
+<!-- 									<p class="d-flex justify-content-center p-t-8"> -->
+<!-- 										日期 -->
+<!-- 									</p> -->
+<!-- 								</div> -->
 
-								<div class="col-9 respon6-next">
-									<div class="rs1-select2 bor8 bg0">
-										<input type="date" name="date" class="form-control">
-										<div class="dropDownSelect2"></div>
-									</div>
-								</div>
-							</div>
+<!-- 								<div class="col-9 respon6-next"> -->
+<!-- 									<div class="rs1-select2 bor8 bg0"> -->
+<!-- 										<input type="date" name="date" class="form-control"> -->
+<!-- 										<div class="dropDownSelect2"></div> -->
+<!-- 									</div> -->
+<!-- 								</div> -->
+<!-- 							</div> -->
 
-							<div class="row p-b-10">
-								<div class="col-3">
-									<p class="dis-inline-block align-middle p-t-20 d-flex justify-content-center">
-										數量
-									</p>
-								</div>
-								<div class="col-9 ">
-									<div class="wrap-num-product flex-w m-r-20 m-tb-10">
-										<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-											<i class="fs-16 zmdi zmdi-minus"></i>
-										</div>
-										<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product" value="1">
-										<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-											<i class="fs-16 zmdi zmdi-plus"></i>
-										</div>
-									</div>
+<!-- 							<div class="row p-b-10"> -->
+<!-- 								<div class="col-3"> -->
+<!-- 									<p class="dis-inline-block align-middle p-t-20 d-flex justify-content-center"> -->
+<!-- 										數量 -->
+<!-- 									</p> -->
+<!-- 								</div> -->
+<!-- 								<div class="col-9 "> -->
+<!-- 									<div class="wrap-num-product flex-w m-r-20 m-tb-10"> -->
+<!-- 										<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m"> -->
+<!-- 											<i class="fs-16 zmdi zmdi-minus"></i> -->
+<!-- 										</div> -->
+<!-- 										<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product" value="1"> -->
+<!-- 										<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m"> -->
+<!-- 											<i class="fs-16 zmdi zmdi-plus"></i> -->
+<!-- 										</div> -->
+<!-- 									</div> -->
 
-								</div>
-							</div>
-							<button	class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail">
-								加入購物車
-							</button>
-						</div>
-					</div>
-				</div>
+<!-- 								</div> -->
+<!-- 							</div> -->
+<!-- 							<button	class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail"> -->
+<!-- 								加入購物車 -->
+<!-- 							</button> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
+<!-- 				</div> -->
 
 
 
@@ -193,15 +177,17 @@
 			                <div class="col-md-8 col-lg-7 p-b-30">
 			                    <div class="p-r-50 p-t-5 p-lr-0-lg">
 			                        <h4 id="locationName" class="mtext-105 cl2 js-name-detail p-b-14 font-weight-bold"></h4>
-			
-			                        <span class="mtext-106 cl2">
-											$58.79
-										</span>
-			
-			                        <p class="stext-102 cl3 p-t-23">
-			                            Nulla eget sem vitae eros pharetra viverra. Nam vitae luctus ligula. Mauris consequat
-			                            ornare feugiat.
-			                        </p>
+<!-- 									<h4 class="ltext-102 font-weight-bold cl2 js-name-detail p-b-14"></h4> -->
+									<div class="p-b-10">
+										<div class="rating-count" value="carRental">
+											尚無評論
+										</div>
+										<div class="p-t-20">
+											<i class="fa fa-map-marker" aria-hidden="true"></i>
+											<span id="locationDistrict"></span>
+										</div>
+										<p id="locationAddress" ></p>
+									</div>
 			
 			
 			                        <!--  -->
@@ -309,15 +295,20 @@
 		
 	    $('.js-show-modal1').on('click',function(e){
 			let imgsrc = $(this).prev('input[name="locationImage"]').val()
-			$('#locationImage').attr('src', "/gotrip/" + imgsrc);
+			$('#locationImage').attr('src', "/gotrip" + imgsrc);
 			
 			$(this).closest("tr");
 			let row = $(this).closest("tr");
+
 			let name = $(row).find('td').eq(2).html();
-// 			let id = $(row).find('td').eq(1).html();
-			
-			
 			$('#locationName').text(name);
+			let county = $(row).find('td').eq(3).html();
+			let district = $(row).find('td').eq(4).html();
+			let address = $(row).find('td').eq(5).html()
+			$('#locationAddress').text(county + district + address);
+			$('#locationDistrict').text(county + ', ' + district);
+			$('#rating').attr('id', $(row).find('td').eq(1).html());
+			
 	        $('.js-modal1').addClass('show-modal1');
 	    });
 
