商品詳細資訊頁面呈現顧客評論list

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2864,6 +2864,10 @@ input.num-product::-webkit-inner-spin-button {
 /*==================================================================
        BORDER BORDER  BORDER  BORDER  BORDER  BORDER  BORDER  BORDER
 ==================================================================*/
+.bornone {
+	border: none;
+}
+
 .bor0 {
   border-radius: 50%;
 }
