--- a/src/main/resources/templates/frontend/car/car-detail.html
+++ b/src/main/resources/templates/frontend/car/car-detail.html
@@ -42,7 +42,7 @@
 				<div class="col-md-4 m-t-45 p-b-30">
 					<div class="p-t-5">
 						<p th:text="${option.carLocation.companyName}" class="stext-110 cl4"></p>
-						<h4 th:text="${option.carModel.makeCh + ' ' + option.carModel.makeEn + ' ' + option.carModel.model}" class="ltext-102 font-weight-bold cl2 js-name-detail p-b-14"></h4>
+						<h2 th:text="${option.carModel.makeCh + ' ' + option.carModel.makeEn + ' ' + option.carModel.model}" class="font-weight-bold cl2 js-name-detail p-b-14"></h2>
 						<div class="p-b-10">
 							<div class="rating-count" th:id="${option.id}" value="carRental">
 								尚無評論
@@ -77,25 +77,24 @@
 								</div>
 							</div>
 
-							<div class="row p-b-10">
-								<div class="col-3">
-									<p class="dis-inline-block align-middle p-t-20 d-flex justify-content-center">
-										數量
-									</p>
-								</div>
-								<div class="col-9 ">
-									<div class="wrap-num-product flex-w m-r-20 m-tb-10">
-										<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-											<i class="fs-16 zmdi zmdi-minus"></i>
-										</div>
-										<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product" value="1">
-										<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-											<i class="fs-16 zmdi zmdi-plus"></i>
-										</div>
-									</div>
-
-								</div>
-							</div>
+<!-- 							<div class="row p-b-10"> -->
+<!-- 								<div class="col-3"> -->
+<!-- 									<p class="dis-inline-block align-middle p-t-20 d-flex justify-content-center"> -->
+<!-- 										數量 -->
+<!-- 									</p> -->
+<!-- 								</div> -->
+<!-- 								<div class="col-9 "> -->
+<!-- 									<div class="wrap-num-product flex-w m-r-20 m-tb-10"> -->
+<!-- 										<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m"> -->
+<!-- 											<i class="fs-16 zmdi zmdi-minus"></i> -->
+<!-- 										</div> -->
+<!-- 										<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product" value="1"> -->
+<!-- 										<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m"> -->
+<!-- 											<i class="fs-16 zmdi zmdi-plus"></i> -->
+<!-- 										</div> -->
+<!-- 									</div> -->
+<!-- 								</div> -->
+<!-- 							</div> -->
 							<button	class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 js-addcart-detail">
 								加入購物車
 							</button>
@@ -108,298 +107,78 @@
 			<div class="row">
 				<div class="col-sm-10 col-md-8">
 					<div class="p-b-30 m-lr-15-sm">
-										<!-- Review -->
-						<div class="flex-w flex-t p-b-68">
-							<div class="comments-itemId" th:id="${option.id}" value="carRental">
-								尚無評論
-							</div>
-<!-- 							<div class="wrap-pic-s size-109 bor0 of-hidden m-r-18 m-t-6"> -->
-<!-- 								<img src="images/avatar-01.jpg" alt="AVATAR"> -->
-<!-- 							</div> -->
-
-<!-- 							<div class="size-207"> -->
-<!-- 								<div class="flex-w flex-sb-m p-b-17"> -->
-<!-- 									<span class="mtext-107 cl2 p-r-20"> -->
-<!-- 										Ariana Grande -->
-<!-- 									</span> -->
-<!-- 									<span class="fs-18 cl11"> -->
-<!-- 										<i class="zmdi zmdi-star"></i> -->
-<!-- 										<i class="zmdi zmdi-star"></i> -->
-<!-- 										<i class="zmdi zmdi-star"></i> -->
-<!-- 										<i class="zmdi zmdi-star"></i> -->
-<!-- 										<i class="zmdi zmdi-star-half"></i> -->
-<!-- 									</span> -->
-<!-- 								</div> -->
-
-<!-- 								<p class="stext-102 cl6"> -->
-<!-- 									Quod autem in homine praestantissimum atque optimum est, id -->
-<!-- 									deseruit. Apud ceteros autem philosophos -->
-<!-- 								</p> -->
-<!-- 							</div> -->
+						<!-- Review -->
+						<div class="">
+							<h3 class="font-weight-bold">顧客評價</h3>
+							<div class="comments-itemId m-5" th:id="${option.id}" value="carRental"></div>
 						</div>
 
 						<!-- Add review -->
-						<form class="w-full">
-							<h5 class="mtext-108 cl2 p-b-7">
-								Add a review
-							</h5>
-							<p class="stext-102 cl6">
-								Your email address will not be published. Required fields are marked *
-							</p>
+<!-- 						<form class="w-full"> -->
+<!-- 							<h5 class="mtext-108 cl2 p-b-7"> -->
+<!-- 								Add a review -->
+<!-- 							</h5> -->
+<!-- 							<p class="stext-102 cl6"> -->
+<!-- 								Your email address will not be published. Required fields are marked * -->
+<!-- 							</p> -->
 							
-							<div class="flex-w flex-m p-t-50 p-b-23">
-								<span class="stext-102 cl3 m-r-16">
-									Your Rating
-								</span>
+<!-- 							<div class="flex-w flex-m p-t-50 p-b-23"> -->
+<!-- 								<span class="stext-102 cl3 m-r-16"> -->
+<!-- 									Your Rating -->
+<!-- 								</span> -->
 
-								<span class="wrap-rating fs-18 cl11 pointer">
-									<i class="item-rating pointer zmdi zmdi-star-outline"></i>
-									<i class="item-rating pointer zmdi zmdi-star-outline"></i>
-									<i class="item-rating pointer zmdi zmdi-star-outline"></i>
-									<i class="item-rating pointer zmdi zmdi-star-outline"></i>
-									<i class="item-rating pointer zmdi zmdi-star-outline"></i>
-									<input class="dis-none" type="number" name="rating">
-								</span>
-							</div>
-							<div class="row p-b-25">
-								<div class="col-12 p-b-5">
-									<label class="stext-102 cl3" for="review">Your review</label>
-									<textarea class="size-110 bor8 stext-102 cl2 p-lr-20 p-tb-10" id="review" name="review"></textarea>
-								</div>
+<!-- 								<span class="wrap-rating fs-18 cl11 pointer"> -->
+<!-- 									<i class="item-rating pointer zmdi zmdi-star-outline"></i> -->
+<!-- 									<i class="item-rating pointer zmdi zmdi-star-outline"></i> -->
+<!-- 									<i class="item-rating pointer zmdi zmdi-star-outline"></i> -->
+<!-- 									<i class="item-rating pointer zmdi zmdi-star-outline"></i> -->
+<!-- 									<i class="item-rating pointer zmdi zmdi-star-outline"></i> -->
+<!-- 									<input class="dis-none" type="number" name="rating"> -->
+<!-- 								</span> -->
+<!-- 							</div> -->
+<!-- 							<div class="row p-b-25"> -->
+<!-- 								<div class="col-12 p-b-5"> -->
+<!-- 									<label class="stext-102 cl3" for="review">Your review</label> -->
+<!-- 									<textarea class="size-110 bor8 stext-102 cl2 p-lr-20 p-tb-10" id="review" name="review"></textarea> -->
+<!-- 								</div> -->
 
-								<div class="col-sm-6 p-b-5">
-									<label class="stext-102 cl3" for="name">Name</label>
-									<input class="size-111 bor8 stext-102 cl2 p-lr-20" id="name" type="text" name="name">
-								</div>
+<!-- 								<div class="col-sm-6 p-b-5"> -->
+<!-- 									<label class="stext-102 cl3" for="name">Name</label> -->
+<!-- 									<input class="size-111 bor8 stext-102 cl2 p-lr-20" id="name" type="text" name="name"> -->
+<!-- 								</div> -->
 
-								<div class="col-sm-6 p-b-5">
-									<label class="stext-102 cl3" for="email">Email</label>
-									<input class="size-111 bor8 stext-102 cl2 p-lr-20" id="email" type="text" name="email">
-								</div>
-							</div>
+<!-- 								<div class="col-sm-6 p-b-5"> -->
+<!-- 									<label class="stext-102 cl3" for="email">Email</label> -->
+<!-- 									<input class="size-111 bor8 stext-102 cl2 p-lr-20" id="email" type="text" name="email"> -->
+<!-- 								</div> -->
+<!-- 							</div> -->
 
-							<button class="flex-c-m stext-101 cl0 size-112 bg7 bor11 hov-btn3 p-lr-15 trans-04 m-b-10">
-								Submit
-							</button>
-						</form>
+<!-- 							<button class="flex-c-m stext-101 cl0 size-112 bg7 bor11 hov-btn3 p-lr-15 trans-04 m-b-10"> -->
+<!-- 								Submit -->
+<!-- 							</button> -->
+<!-- 						</form> -->
 					</div>
 				</div>
 			</div>
 			
 			<div class="row">
-				<div class="col-sm-10 col-md-8">
-					<h3>租車地點</h3>
+				<div class="col-sm-10 col-md-8 font-weight-bold">
+					<h3 class="font-weight-bold">租車地點</h3>
 					<div id="map" style="width:100%; height: 500px;"></div>
 				</div>
 			</div>
-			
 
-			<div class="bor10 m-t-50 p-t-43 p-b-40">
-				<!-- Tab01 -->
-				<div class="tab01">
-					<!-- Nav tabs -->
-					<ul class="nav nav-tabs" role="tablist">
-						<li class="nav-item p-b-10">
-							<a class="nav-link active" data-toggle="tab" href="#description" role="tab">Description</a>
-						</li>
-
-						<li class="nav-item p-b-10">
-							<a class="nav-link" data-toggle="tab" href="#information" role="tab">Additional
-								information</a>
-						</li>
-
-						<li class="nav-item p-b-10">
-							<a class="nav-link" data-toggle="tab" href="#reviews" role="tab">Reviews (1)</a>
-						</li>
-					</ul>
-
-					<!-- Tab panes -->
-					<div class="tab-content p-t-43">
-						<!-- - -->
-						<div class="tab-pane fade show active" id="description" role="tabpanel">
-							<div class="how-pos2 p-lr-15-md">
-								<p class="stext-102 cl6">
-									Aenean sit amet gravida nisi. Nam fermentum est felis, quis feugiat nunc fringilla
-									sit amet. Ut in blandit ipsum. Quisque luctus dui at ante aliquet, in hendrerit
-									lectus interdum. Morbi elementum sapien rhoncus pretium maximus. Nulla lectus enim,
-									cursus et elementum sed, sodales vitae eros. Ut ex quam, porta consequat interdum
-									in, faucibus eu velit. Quisque rhoncus ex ac libero varius molestie. Aenean tempor
-									sit amet orci nec iaculis. Cras sit amet nulla libero. Curabitur dignissim, nunc nec
-									laoreet consequat, purus nunc porta lacus, vel efficitur tellus augue in ipsum. Cras
-									in arcu sed metus rutrum iaculis. Nulla non tempor erat. Duis in egestas nunc.
-								</p>
-							</div>
-						</div>
-
-						<!-- - -->
-						<div class="tab-pane fade" id="information" role="tabpanel">
-							<div class="row">
-								<div class="col-sm-10 col-md-8 col-lg-6 m-lr-auto">
-									<ul class="p-lr-28 p-lr-15-sm">
-										<li class="flex-w flex-t p-b-7">
-											<span class="stext-102 cl3 size-205">
-												Weight
-											</span>
-
-											<span class="stext-102 cl6 size-206">
-												0.79 kg
-											</span>
-										</li>
-
-										<li class="flex-w flex-t p-b-7">
-											<span class="stext-102 cl3 size-205">
-												Dimensions
-											</span>
-
-											<span class="stext-102 cl6 size-206">
-												110 x 33 x 100 cm
-											</span>
-										</li>
-
-										<li class="flex-w flex-t p-b-7">
-											<span class="stext-102 cl3 size-205">
-												Materials
-											</span>
-
-											<span class="stext-102 cl6 size-206">
-												60% cotton
-											</span>
-										</li>
-
-										<li class="flex-w flex-t p-b-7">
-											<span class="stext-102 cl3 size-205">
-												Color
-											</span>
-
-											<span class="stext-102 cl6 size-206">
-												Black, Blue, Grey, Green, Red, White
-											</span>
-										</li>
-
-										<li class="flex-w flex-t p-b-7">
-											<span class="stext-102 cl3 size-205">
-												Size
-											</span>
-
-											<span class="stext-102 cl6 size-206">
-												XL, L, M, S
-											</span>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-
-						<!-- - -->
-						<div class="tab-pane fade" id="reviews" role="tabpanel">
-							<div class="row">
-								<div class="col-sm-10 col-md-8 col-lg-6 m-lr-auto">
-									<div class="p-b-30 m-lr-15-sm">
-										<!-- Review -->
-										<div class="flex-w flex-t p-b-68">
-											<div class="wrap-pic-s size-109 bor0 of-hidden m-r-18 m-t-6">
-												<img src="images/avatar-01.jpg" alt="AVATAR">
-											</div>
-
-											<div class="size-207">
-												<div class="flex-w flex-sb-m p-b-17">
-													<span class="mtext-107 cl2 p-r-20">
-														Ariana Grande
-													</span>
-
-													<span class="fs-18 cl11">
-														<i class="zmdi zmdi-star"></i>
-														<i class="zmdi zmdi-star"></i>
-														<i class="zmdi zmdi-star"></i>
-														<i class="zmdi zmdi-star"></i>
-														<i class="zmdi zmdi-star-half"></i>
-													</span>
-												</div>
-
-												<p class="stext-102 cl6">
-													Quod autem in homine praestantissimum atque optimum est, id
-													deseruit. Apud ceteros autem philosophos
-												</p>
-											</div>
-										</div>
-
-										<!-- Add review -->
-										<form class="w-full">
-											<h5 class="mtext-108 cl2 p-b-7">
-												Add a review
-											</h5>
-
-											<p class="stext-102 cl6">
-												Your email address will not be published. Required fields are marked *
-											</p>
-
-											<div class="flex-w flex-m p-t-50 p-b-23">
-												<span class="stext-102 cl3 m-r-16">
-													Your Rating
-												</span>
-
-												<span class="wrap-rating fs-18 cl11 pointer">
-													<i class="item-rating pointer zmdi zmdi-star-outline"></i>
-													<i class="item-rating pointer zmdi zmdi-star-outline"></i>
-													<i class="item-rating pointer zmdi zmdi-star-outline"></i>
-													<i class="item-rating pointer zmdi zmdi-star-outline"></i>
-													<i class="item-rating pointer zmdi zmdi-star-outline"></i>
-													<input class="dis-none" type="number" name="rating">
-												</span>
-											</div>
-
-											<div class="row p-b-25">
-												<div class="col-12 p-b-5">
-													<label class="stext-102 cl3" for="review">Your review</label>
-													<textarea class="size-110 bor8 stext-102 cl2 p-lr-20 p-tb-10"
-														id="review" name="review"></textarea>
-												</div>
-
-												<div class="col-sm-6 p-b-5">
-													<label class="stext-102 cl3" for="name">Name</label>
-													<input class="size-111 bor8 stext-102 cl2 p-lr-20" id="name"
-														type="text" name="name">
-												</div>
-
-												<div class="col-sm-6 p-b-5">
-													<label class="stext-102 cl3" for="email">Email</label>
-													<input class="size-111 bor8 stext-102 cl2 p-lr-20" id="email"
-														type="text" name="email">
-												</div>
-											</div>
-
-											<button
-												class="flex-c-m stext-101 cl0 size-112 bg7 bor11 hov-btn3 p-lr-15 trans-04 m-b-10">
-												Submit
-											</button>
-										</form>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
 		</div>
 
-		<div class="bg6 flex-c-m flex-w size-302 m-t-73 p-tb-15">
-			<span class="stext-107 cl6 p-lr-25">
-				SKU: JAK-01
-			</span>
-
-			<span class="stext-107 cl6 p-lr-25">
-				Categories: Jacket, Men
-			</span>
-		</div>
 	</section>
 
 
 	<!-- Related Products -->
-	<section class="sec-relate-product bg0 p-t-45 p-b-105">
+	<section class="sec-relate-product bg6 p-t-45 p-b-105">
 		<div class="container">
 			<div class="p-b-45">
-				<h3 class="ltext-106 cl5 txt-center">
-					Related Products
+				<h3 class="cl5 font-weight-bold">
+					相關車款
 				</h3>
 			</div>
 
