--- a/src/main/resources/templates/frontend/login.html
+++ b/src/main/resources/templates/frontend/login.html
@@ -57,7 +57,7 @@
 <!--                             </div> -->
 <!--                         </div> -->
                         <div class="form-sub-w3ls">
-                            <input id="username" placeholder="Email" class="mail" type="email" name="username" required onkeyup="CheckEmail()">
+                            <input id="username" placeholder="Email" class="mail" type="email" name="username" required>
                             <div class="icon-agile">
                                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
                             </div>
