--- a/src/main/resources/templates/frontend/partials/fragment.html
+++ b/src/main/resources/templates/frontend/partials/fragment.html
@@ -131,14 +131,14 @@
                             <li><a th:href="@{/logout}">登出</a></li>
                         </ul>
                         <ul class="sub-menu" sec:authorize="hasRole('DEALER')">
-                            <li><a th:href="@{/userdetails}">商家資料管理</a></li>
+                            <li><a th:href="@{/userdetails}">會員中心</a></li>
                             <li><a th:href="@{/vendor/tickets}">景點商家管理</a></li>
                             <li><a th:href="@{/vendor/hotels}">飯店商家管理</a></li>
                             <li><a th:href="@{/vendor/cars/locations/1}">租車商家管理</a></li>
                             <li><a th:href="@{/logout}">登出</a></li>
                         </ul>
                         <ul class="sub-menu" sec:authorize="hasRole('USER')">
-                            <li><a th:href="@{/userdetails}">修改個人資料</a></li>
+                            <li><a th:href="@{/userdetails}">會員中心</a></li>
                             <li><a th:href="@{/vendor/tickets}">我的訂單</a></li>
                             <li><a th:href="@{/vendor/tickets}">我的優惠券</a></li>
                             <li><a th:href="@{/logout}">登出</a></li>
